utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_with_discriminator_simple_form.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "discriminator": {
    "propertyName": "bar"
  },
  "oneOf": [
    {
      "$ref": "#/components/schemas/BarBarInternal"
    },
    {
      "$ref": "#/components/schemas/FooInternal"
    }
  ]
}
