utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_with_discriminator_with_mapping.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "discriminator": {
    "mapping": {
      "bar": "#/components/schemas/BarBarInternal",
      "foo": "#/components/schemas/FooInternal"
    },
    "propertyName": "bar_type"
  },
  "oneOf": [
    {
      "$ref": "#/components/schemas/BarBarInternal"
    },
    {
      "$ref": "#/components/schemas/FooInternal"
    }
  ]
}
