utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_with_enum_ref_serde_partially_adjacently_tagged_named_fields-2.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: foo_value
---
{
  "oneOf": [
    {
      "properties": {
        "content": {
          "properties": {
            "n": {
              "format": "int32",
              "type": "integer"
            }
          },
          "required": [
            "n"
          ],
          "type": "object"
        },
        "type": {
          "enum": [
            "One"
          ],
          "type": "string"
        }
      },
      "required": [
        "content",
        "type"
      ],
      "type": "object"
    },
    {
      "$ref": "#/components/schemas/Bar"
    }
  ]
}
