utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_with_enum_ref_serde_partially_internally_tagged_named_fields-2.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: foo_value
---
{
  "oneOf": [
    {
      "properties": {
        "n": {
          "format": "int32",
          "type": "integer"
        },
        "type": {
          "enum": [
            "One"
          ],
          "type": "string"
        }
      },
      "required": [
        "n",
        "type"
      ],
      "type": "object"
    },
    {
      "$ref": "#/components/schemas/Bar"
    }
  ]
}
