utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_with_ref_serde_partially_untagged_named_fields.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "oneOf": [
    {
      "properties": {
        "One": {
          "properties": {
            "n": {
              "format": "int32",
              "type": "integer"
            }
          },
          "required": [
            "n"
          ],
          "type": "object"
        }
      },
      "required": [
        "One"
      ],
      "type": "object"
    },
    {
      "properties": {
        "bar": {
          "$ref": "#/components/schemas/Bar"
        }
      },
      "required": [
        "bar"
      ],
      "type": "object"
    }
  ]
}
